@@ -1,5 +1,11 @@
 2004-12-02  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
+	PR c++/15664, c++/18276
+	* g++.dg/template/ttp13.C: New test.
+	* g++.dg/template/ttp14.C: Likewise.
+
+2004-12-02  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
 	PR c++/18123
 	* g++.dg/parse/enum2.C: New test.
 	* g++.old-deja/g++.pt/enum5.C: Adjust error location.
